# GenU

./: .gitignore  README.md  pyproject.toml  requirements.txt
genu/: utils.py
genu/Job_agent/: config.py  job_scraper.py  vectorestore.py
notebooks/: Resume_enhancer.ipynb  linkedin_jobs.ipynb  list_professors.ipynb  parse_content_all.ipynb  parse_content_all.ipynb:Zone.Identifier  playground_create_vector_store.ipynb  playground_create_vector_store_langgraph.ipynb  playground_create_vector_store_langgraph_jobs.ipynb  preprocess.ipynb
notebooks/my_resume/: CV_Ali Zarreh_2025_01_30_usaa.docx  CV_Ali Zarreh_2025_01_30_usaa.docx:com.dropbox.attrs
